--- a/css/master.css
+++ b/css/master.css
@@ -1,14 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Fugaz+One');
-@import url('https://fonts.googleapis.com/css?family=Righteous');
+@import url("https://fonts.googleapis.com/css?family=Fugaz+One");
+@import url("https://fonts.googleapis.com/css?family=Righteous");
 
 * {
   border-radius: 10px;
+  box-sizing: border-box;
 }
+
 #cardboard {
-  overflow: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
   margin: 5px auto;
   padding: 10px;
-  background-color: #CFD8DC;
+  background-color: #cfd8dc;
 }
 
 #startbtn {
@@ -20,11 +26,11 @@
 
 #winner {
   text-align: center;
-  font-family: 'Fugaz One', cursive;
+  font-family: "Fugaz One", cursive;
   color: white;
   line-height: 240px;
   font-size: 3em;
-  position:fixed;
+  position: fixed;
   top: 50%;
   width: 100%;
   height: 240px;
@@ -55,7 +61,8 @@
   display: block;
 }
 
-#score1, #score2 {
+#score1,
+#score2 {
   color: #00b489;
   font-size: 2em;
   padding: 5px;
@@ -85,7 +92,7 @@
 }
 
 .card .front {
-  background-color: #1E90FF;
+  background-color: #1e90ff;
 }
 
 .back img {
@@ -102,9 +109,11 @@
   box-shadow: 0 10px 5px #888888;
 }
 
-.flipped{}
+.flipped {
+}
 
-.matched{}
+.matched {
+}
 
 header {
   position: relative;
@@ -117,11 +126,10 @@ header {
 }
 
 header h2 {
-  font-family: 'Righteous', cursive;
+  font-family: "Righteous", cursive;
   display: inline-block;
   padding: 5px;
 }
-
 
 span h2 {
   margin: 5px;
