--- a/css/master.css
+++ b/css/master.css
@@ -9,10 +9,10 @@
 #cardboard {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   overflow: hidden;
-  margin: 5px auto;
+  margin: 10% auto 16px auto;
   padding: 10px;
   background-color: #cfd8dc;
 }
@@ -106,7 +106,10 @@
 }
 
 .turn {
-  box-shadow: 0 10px 5px #888888;
+  background-color: #dcebf1;
+  border: 1px solid #292929;
+  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+  animation: ripple 2s infinite;
 }
 
 .flipped {
@@ -133,4 +136,31 @@ header h2 {
 
 span h2 {
   margin: 5px;
+}
+
+@-webkit-keyframes ripple {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(20, 20, 20, 0.4);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 10px rgba(20, 20, 20, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(20, 20, 20, 0);
+  }
+}
+
+@keyframes ripple {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(20, 20, 20, 0.4);
+    box-shadow: 0 0 0 0 rgba(20, 20, 20, 0.4);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 10px rgba(20, 20, 20, 0);
+    box-shadow: 0 0 0 10px rgba(20, 20, 20, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(20, 20, 20, 0);
+    box-shadow: 0 0 0 0 rgba(20, 20, 20, 0);
+  }
 }
